feat: Add Interface, Service, Controller, and View for Invoice
- Added IInvoiceService interface to Contracts folder
- Implemented InvoiceService in Services folder to handle Invoice data
- Created InvoiceController in Controllers folder to expose API endpoints
  - GET /api/invoiceto read all Invoice data
  - GET /api/invoice/{id} to read Invoice data by ID
- Added views in Views/Invoices folder for displaying Invoice data
  - Index.cshtml to display all Invoices
  - Details.cshtml to display Invoice details by ID

--- a/WebVRMS/Views/Rental/Index.cshtml
+++ b/WebVRMS/Views/Rental/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Rentals</h1>
 
-<table class="table">
+<table class="Rental Data">
     <thead>
         <tr>
             <th>RentalId</th>
@@ -15,7 +15,7 @@
             <th>Status</th>
             <th>UserId</th>
             <th>VehicleId</th>
-            <th>Detail</th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
