Modify index Vehicle & Rental view

--- a/WebVRMS/Views/Home/Index.cshtml
+++ b/WebVRMS/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="" class="logo d-flex align-items-center">
+      <a href="#" class="logo d-flex align-items-center">
         <img src="./Base/assets/img/logo.png" alt="">
         <span class="d-none d-lg-block">VRMS</span>
       </a>
@@ -88,7 +88,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="#">
+        <a class="nav-link " href="/">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -104,28 +104,28 @@
       </li><!-- End Profile Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
+        <a class="nav-link collapsed" href="Vehicles">
           <i class="bi bi-truck"></i>
           <span>Vehicles</span>
         </a>
       </li><!-- End Register Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
+        <a class="nav-link collapsed" href="/Rental">
           <i class="bi bi-layout-text-window-reverse"></i>
           <span>Rentals</span>
         </a>
       </li><!-- End F.A.Q Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
+        <a class="nav-link collapsed" href="/Invoice">
           <i class="bi bi-bar-chart"></i>
           <span>Invoices</span>
         </a>
       </li><!-- End Contact Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
+        <a class="nav-link collapsed" href="/Payments">
           <i class="bi bi-cash"></i>
           <span>Payments</span>
         </a>
@@ -141,7 +141,7 @@
       <h1>Dashboard</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="#">Home</a></li>
+          <li class="breadcrumb-item"><a href="/">Home</a></li>
           <li class="breadcrumb-item active">Dashboard</li>
         </ol>
       </nav>
