--- a/WebVRMS/Views/Rental/Index.cshtml
+++ b/WebVRMS/Views/Rental/Index.cshtml
@@ -1,35 +1,230 @@
 ﻿@model List<WebVRMS.Models.Rental>
 
 @{
-    ViewData["Title"] = "Home";
+    Layout = null;
 }
 
-<h1>Rentals</h1>
+<!DOCTYPE html>
+<html lang="en">
 
-<table class="Rental Data">
-    <thead>
-        <tr>
-            <th>RentalId</th>
-            <th>RentalDate</th>
-            <th>ReturnDate</th>
-            <th>Status</th>
-            <th>UserId</th>
-            <th>VehicleId</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var rental in Model)
-        {
-            <tr>
-                <td>@rental.RentalId</td>
-                <td>@rental.RentalDate</td>
-                <td>@rental.ReturnDate</td>
-                <td>@rental.Status</td>
-                <td>@rental.UserId</td>
-                <td>@rental.VehicleId</td>
-                <td><a href="/Rental/Details/@rental.RentalId">detail</a></td>
-            </tr>
-        }
-    </tbody>
-</table>
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>Rental - Vehicle Rental Management System</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <!-- Favicons -->
+    <link href="./Base/assets/img/favicon.png" rel="icon">
+    <link href="./Base/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link href="./Base/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./Base/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="./Base/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="./Base/assets/vendor/quill/quill.snow.css" rel="stylesheet">
+    <link href="./Base/assets/vendor/quill/quill.bubble.css" rel="stylesheet">
+    <link href="./Base/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="./Base/assets/vendor/simple-datatables/style.css" rel="stylesheet">
+
+    <!-- Template Main CSS File -->
+    <link href="./Base/assets/css/style.css" rel="stylesheet">
+
+    <!-- =======================================================
+    * Template Name: NiceAdmin
+    * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
+    * Updated: Apr 20 2024 with Bootstrap v5.3.3
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
+</head>
+
+<body>
+
+    <!-- ======= Header ======= -->
+    <header id="header" class="header fixed-top d-flex align-items-center">
+
+        <div class="d-flex align-items-center justify-content-between">
+            <a href="#" class="logo d-flex align-items-center">
+                <img src="./Base/assets/img/logo.png" alt="">
+                <span class="d-none d-lg-block">VRMS</span>
+            </a>
+            <i class="bi bi-list toggle-sidebar-btn"></i>
+        </div><!-- End Logo -->
+
+        <nav class="header-nav ms-auto">
+            <ul class="d-flex align-items-center">
+
+                <li class="nav-item dropdown pe-3">
+
+                    <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
+                        <img src="./Base/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+                        <span class="d-none d-md-block dropdown-toggle ps-2">Nama Admin</span>
+                    </a><!-- End Profile Iamge Icon -->
+
+                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
+
+                        <li>
+                            <a class="dropdown-item d-flex align-items-center" href="#">
+                                <i class="bi bi-box-arrow-right"></i>
+                                <span>Sign Out</span>
+                            </a>
+                        </li>
+
+                    </ul><!-- End Profile Dropdown Items -->
+                </li><!-- End Profile Nav -->
+
+            </ul>
+        </nav><!-- End Icons Navigation -->
+
+    </header><!-- End Header -->
+    <!-- ======= Sidebar ======= -->
+    <aside id="sidebar" class="sidebar">
+
+        <ul class="sidebar-nav" id="sidebar-nav">
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/">
+                    <i class="bi bi-grid"></i>
+                    <span>Dashboard</span>
+                </a>
+            </li><!-- End Dashboard Nav -->
+
+            <li class="nav-heading">Pages</li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#">
+                    <i class="bi bi-people"></i>
+                    <span>Customers</span>
+                </a>
+            </li><!-- End Profile Page Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="Vehicles">
+                    <i class="bi bi-truck"></i>
+                    <span>Vehicles</span>
+                </a>
+            </li><!-- End Register Page Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link " href="/Rental">
+                    <i class="bi bi-layout-text-window-reverse"></i>
+                    <span>Rentals</span>
+                </a>
+            </li><!-- End F.A.Q Page Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/Invoice">
+                    <i class="bi bi-bar-chart"></i>
+                    <span>Invoices</span>
+                </a>
+            </li><!-- End Contact Page Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/Payments">
+                    <i class="bi bi-cash"></i>
+                    <span>Payments</span>
+                </a>
+            </li><!-- End Contact Page Nav -->
+
+        </ul>
+
+    </aside><!-- End Sidebar-->
+
+    <main id="main" class="main">
+
+        <div class="pagetitle">
+            <h1>Rental</h1>
+            <nav>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/">Home</a></li>
+                    <li class="breadcrumb-item active">Dashboard</li>
+                </ol>
+            </nav>
+        </div><!-- End Page Title -->
+
+        <section class="section">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Vehicle Data</h5>
+
+                            <!-- Table with stripped rows -->
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Rental ID</th>
+                                        <th scope="col">RentalDate</th>
+                                        <th scope="col">ReturnDate</th>
+                                        <th scope="col">Status</th>
+                                        <th scope="col">User ID</th>
+                                        <th scope="col">Vehicle ID</th>
+                                        <th scope="col">Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var rental in Model)
+                                    {
+                                        <tr>
+                                            <th scope="row">@rental.RentalId</th>
+                                            <td>@rental.RentalDate</td>
+                                            <td>@rental.ReturnDate</td>
+                                            <td>@rental.Status</td>
+                                            <td>@rental.UserId</td>
+                                            <td>@rental.VehicleId"</td>
+                                            <td>
+                                                <a href="/Rental/Details/@rental.RentalId" class="btn btn-info">Details</a>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                            <!-- End Table with stripped rows -->
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+    </main><!-- End #main -->
+    <!-- ======= Footer ======= -->
+    <footer id="footer" class="footer">
+        <div class="copyright">
+            &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
+        </div>
+        <div class="credits">
+            <!-- All the links in the footer should remain intact. -->
+            <!-- You can delete the links only if you purchased the pro version. -->
+            <!-- Licensing information: https://bootstrapmade.com/license/ -->
+            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
+            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        </div>
+    </footer><!-- End Footer -->
+
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+    <!-- Vendor JS Files -->
+    <script src="./Base/assets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="./Base/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./Base/assets/vendor/chart.js/chart.umd.js"></script>
+    <script src="./Base/assets/vendor/echarts/echarts.min.js"></script>
+    <script src="./Base/assets/vendor/quill/quill.js"></script>
+    <script src="./Base/assets/vendor/simple-datatables/simple-datatables.js"></script>
+    <script src="./Base/assets/vendor/tinymce/tinymce.min.js"></script>
+    <script src="./Base/assets/vendor/php-email-form/validate.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="./Base/assets/js/main.js"></script>
+
+</body>
+
+</html>
