--- a/WebVRMS/Views/Rental/Adm.cshtml
+++ b/WebVRMS/Views/Rental/Adm.cshtml
@@ -29,6 +29,7 @@
                 <td>@rental.UserId</td>
                 <td>@rental.VehicleId</td>
                 <td><a href="/Rental/Details/@rental.RentalId">detail</a></td>
+                <td><a href="/Rental/Details/@rental.RentalId">returned</a></td>
             </tr>
         }
     </tbody>
