--- a/WebVRMS/Views/Vehicles/Index.cshtml
+++ b/WebVRMS/Views/Vehicles/Index.cshtml
@@ -1,62 +1,35 @@
-﻿@model List<WebVRMS.Models.Vehicle>
+﻿@model IEnumerable<WebVRMS.Models.Vehicle>
 
 <!DOCTYPE html>
 <html>
 <head>
-    <title>List Of Vehicles</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-B4gt1jrGC7Jh4AgEPAR5lCkYCB6D8p9wjWSpZAlZcqbIBW9lGk55DdhFPpHLm4v0" crossorigin="anonymous">
-    <style>
-        body {
-            padding: 20px;
-        }
-        .table th, .table td {
-            text-align: center;
-        }
-    </style>
+    <title>Vehicles</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="mb-4">List Of Vehicles</h1>
-        <br />
-        <div class="alert alert-info">@ViewBag.Message</div>
-        <br />
-        <form method="post" action="/Vehicles/Index" class="form-inline mb-4">
-            <div class="form-group mx-sm-3 mb-2">
-                <label for="vehiclemodel" class="sr-only">Vehicle Model</label>
-                <input type="text" class="form-control" id="vehiclemodel" name="vehiclemodel" placeholder="Vehicle Model">
-            </div>
-            <button type="submit" class="btn btn-primary mb-2">Search</button>
-        </form>
-        <br />
-
-        <a href="/Vehicles/Create" class="btn btn-success mb-4">Create Vehicle</a>
-        <table class="table table-bordered">
-            <thead class="thead-dark">
+        <h1>Available Vehicles</h1>
+        <table class="table">
+            <thead>
                 <tr>
-                    <th>Vehicle Id</th>
                     <th>Make</th>
                     <th>Model</th>
                     <th>Year</th>
-                    <th>Rental Price</th>
-                    <th>Availability Status</th>
-                    <th>Details</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
+                    <th>Price</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var vehicle in Model)
                 {
                     <tr>
-                        <td>@vehicle.VehicleId</td>
                         <td>@vehicle.Make</td>
                         <td>@vehicle.Model</td>
                         <td>@vehicle.Year</td>
                         <td>@vehicle.RentalPrice</td>
-                        <td>@(vehicle.AvailabilityStatus ? "Available" : "Not Available")</td>
-                        <td><a href="/Vehicles/Details/@vehicle.VehicleId" class="btn btn-info">Details</a></td>
-                        <td><a href="/Vehicles/Edit/@vehicle.VehicleId" class="btn btn-warning">Edit</a></td>
-                        <td><a href="/Vehicles/Delete/@vehicle.VehicleId" class="btn btn-danger">Delete</a></td>
+                        <td>
+                            <a href="/Rental/Create/@vehicle.VehicleId" class="btn btn-primary">Rent</a>
+                        </td>
                     </tr>
                 }
             </tbody>
@@ -64,3 +37,4 @@
     </div>
 </body>
 </html>
+
