--- a/WebVRMS/Views/Vehicles/Create.cshtml
+++ b/WebVRMS/Views/Vehicles/Create.cshtml
@@ -1,6 +1,9 @@
-﻿@{
+﻿@model IEnumerable<WebVRMS.Models.Vehicle>
+
+@{
     Layout = null;
 }
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -14,24 +17,24 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="./Base/assets/img/favicon.png" rel="icon">
-    <link href="./Base/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="~/Base/assets/img/favicon.png" rel="icon">
+    <link href="~/Base/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <link href="./Base/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./Base/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="./Base/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="./Base/assets/vendor/quill/quill.snow.css" rel="stylesheet">
-    <link href="./Base/assets/vendor/quill/quill.bubble.css" rel="stylesheet">
-    <link href="./Base/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="./Base/assets/vendor/simple-datatables/style.css" rel="stylesheet">
+    <link href="~/Base/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Base/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="~/Base/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="~/Base/assets/vendor/quill/quill.snow.css" rel="stylesheet">
+    <link href="~/Base/assets/vendor/quill/quill.bubble.css" rel="stylesheet">
+    <link href="~/Base/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="~/Base/assets/vendor/simple-datatables/style.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="./Base/assets/css/style.css" rel="stylesheet">
+    <link href="~/Base/assets/css/style.css" rel="stylesheet">
 
     <!-- =======================================================
     * Template Name: NiceAdmin
@@ -49,7 +52,7 @@
 
         <div class="d-flex align-items-center justify-content-between">
             <a href="#" class="logo d-flex align-items-center">
-                <img src="./Base/assets/img/logo.png" alt="">
+                <img src="~/Base/assets/img/logo.png" alt="">
                 <span class="d-none d-lg-block">VRMS</span>
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
@@ -61,7 +64,7 @@
                 <li class="nav-item dropdown pe-3">
 
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                        <img src="./Base/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+                        <img src="~/Base/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
                         <span class="d-none d-md-block dropdown-toggle ps-2">Nama Admin</span>
                     </a><!-- End Profile Iamge Icon -->
 
@@ -87,7 +90,7 @@
         <ul class="sidebar-nav" id="sidebar-nav">
 
             <li class="nav-item">
-                <a class="nav-link " href="/">
+                <a class="nav-link collapsed" href="/">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
@@ -320,17 +323,17 @@
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
     <!-- Vendor JS Files -->
-    <script src="./Base/assets/vendor/apexcharts/apexcharts.min.js"></script>
-    <script src="./Base/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="./Base/assets/vendor/chart.js/chart.umd.js"></script>
-    <script src="./Base/assets/vendor/echarts/echarts.min.js"></script>
-    <script src="./Base/assets/vendor/quill/quill.js"></script>
-    <script src="./Base/assets/vendor/simple-datatables/simple-datatables.js"></script>
-    <script src="./Base/assets/vendor/tinymce/tinymce.min.js"></script>
-    <script src="./Base/assets/vendor/php-email-form/validate.js"></script>
+    <script src="~/Base/assets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="~/Base/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/Base/assets/vendor/chart.js/chart.umd.js"></script>
+    <script src="~/Base/assets/vendor/echarts/echarts.min.js"></script>
+    <script src="~/Base/assets/vendor/quill/quill.js"></script>
+    <script src="~/Base/assets/vendor/simple-datatables/simple-datatables.js"></script>
+    <script src="~/Base/assets/vendor/tinymce/tinymce.min.js"></script>
+    <script src="~/Base/assets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="./Base/assets/js/main.js"></script>
+    <script src="~/Base/assets/js/main.js"></script>
 
 </body>
 
