Modify Create Vehicle View

--- a/WebVRMS/Views/Vehicles/Create.cshtml
+++ b/WebVRMS/Views/Vehicles/Create.cshtml
@@ -12,7 +12,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Vehicle - Vehicle Rental Management System</title>
+    <title>Create Vehicle - Vehicle Rental Management System</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -106,7 +106,7 @@
             </li><!-- End Profile Page Nav -->
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="Vehicles">
+                <a class="nav-link " href="Vehicles">
                     <i class="bi bi-truck"></i>
                     <span>Vehicles</span>
                 </a>
@@ -140,11 +140,12 @@
     <main id="main" class="main">
 
         <div class="pagetitle">
-            <h1>Dashboard</h1>
+            <h1>Create</h1>
             <nav>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard</li>
+                    <li class="breadcrumb-item"><a href="/Vehicles">Vehicle</a></li>
+                    <li class="breadcrumb-item active">Create</li>
                 </ol>
             </nav>
         </div><!-- End Page Title -->
@@ -155,7 +156,7 @@
 
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">General Form Elements</h5>
+                            <h5 class="card-title">Create Vehicle</h5>
 
                             <!-- General Form Elements -->
                             <form>
