--- a/WebVRMS/Views/Vehicles/Index.cshtml
+++ b/WebVRMS/Views/Vehicles/Index.cshtml
@@ -143,7 +143,7 @@
             <nav>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard</li>
+                    <li class="breadcrumb-item active">Vehicle</li>
                 </ol>
             </nav>
         </div><!-- End Page Title -->
@@ -155,6 +155,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Vehicle Data</h5>
+                            <a href="/Vehicles/Create" class="btn btn-success mb-4">Create</a>
 
                             <!-- Table with stripped rows -->
                             <table class="table table-striped">
