--- a/WebVRMS/Views/Vehicles/Index.cshtml
+++ b/WebVRMS/Views/Vehicles/Index.cshtml
@@ -136,8 +136,7 @@
 
     </aside><!-- End Sidebar-->
 
-    <main id="main" class="main">
-
+    <main id="main" class="main">       
         <div class="pagetitle">
             <h1>Vehicle</h1>
             <nav>
@@ -147,7 +146,6 @@
                 </ol>
             </nav>
         </div><!-- End Page Title -->
-
         <section class="section">
             <div class="row">
                 <div class="col-lg-12">
@@ -155,6 +153,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Vehicle Data</h5>
+                            <a href="/Vehicles/Create" class="btn btn-success mb-4">Create</a>
 
                             <!-- Table with stripped rows -->
                             <table class="table table-striped">
